# rinha-de-compiler

./: .dockerignore  Dockerfile  README.md  start.sh
files/: basic_sum.json  basic_sum.rinha  fib.json
tsurc/: Cargo.toml
tsurc/src/: main.rs
tsurc/tsurc_parser/: Cargo.toml
tsurc/tsurc_parser/src/: ast.rs  error.rs  lib.rs
tsurc/tsurc_vm/: Cargo.toml
tsurc/tsurc_vm/src/: lib.rs
