[package]
name = "tsurc_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tsurc_parser = { path = "../tsurc_parser" }
